[package]
name = "sanctuary-vault-lite"
version = "0.1.0"
edition = "2021"
description = "Real-time sovereign file encryption watcher – Sanctuary Vault Lite"
license = "AGPL-3.0"

[dependencies]
notify = { version = "6.1", features = ["serde"] }
pqcnet = { path = "pqcnet" }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zeroize = "1.7"
chrono = "0.4"
notify-debouncer-full = "0.3"
ctrlc = "3.4"
dirs = "5.0"

[features]
default = ["windows-overlay"]
windows-overlay = ["winreg", "windows-sys"]

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52", optional = true }
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

[dev-dependencies]
tempfile = "3.10"